--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
         "express": "3.5.1",
         "socket.io": "^1.3.7",
         "pty.js": "^0.3.0",
-        "optimist": "^0.6"
+        "optimist": "^0.6",
+        "shell-quote": "^1.4.3"
     },
     "devDependencies": {
         "load-grunt-tasks": "^3.0",
